@@ -19,7 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <java.version>15</java.version>
+        <java.version>16</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
@@ -36,6 +36,7 @@
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
         <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
         <org.codehaus.mojo.versions-plugin.version>2.8.1</org.codehaus.mojo.versions-plugin.version>
+        <org.codehaus.mojo.exec-plugin.version>3.0.0</org.codehaus.mojo.exec-plugin.version>
 
         <!-- Other Dependencies -->
         <org.apache.logging.log4j.version>2.13.3</org.apache.logging.log4j.version>
@@ -56,6 +57,7 @@
                         <release>${java.version}</release>
                         <compilerArgs>
                             <arg>--enable-preview</arg>
+                            <arg>--add-modules=jdk.incubator.vector</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -112,10 +114,17 @@
                 </plugin>
 
                 <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>${org.codehaus.mojo.exec-plugin.version}</version>
+                </plugin>
+
+                <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <argLine>--enable-preview</argLine>
+                        <argLine>--add-modules=jdk.incubator.vector</argLine>
                     </configuration>
                 </plugin>
             </plugins>
